--- a/index.html
+++ b/index.html
@@ -11,13 +11,26 @@
       rel="stylesheet"
       href="styles.css"
     />
+    <script
+      type="module"
+      src="./script.js"
+    ></script>
+    <script
+      type="module"
+      src="./web-components/button-component/button-component.js"
+    ></script>
   </head>
   <body>
     <div class="container">
       <h1>Vanilla Web Component</h1>
       <div id="father">
         <div id="child">
-          <div id="grand-child"></div>
+          <div id="grand-child">
+            <mi-button
+              id="test-boolean"
+              btn-text="Daleeeeee..."
+            ></mi-button>
+          </div>
         </div>
       </div>
     </div>
