--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
   <body>
     <div class="container">
       <h1>Vanilla Web Component</h1>
-      <div id="father">
-        <div id="child">
-          <div id="grand-child">
-            <mi-button
-              id="test-boolean"
-              btn-text="Daleeeeee..."
-            ></mi-button>
+      <div class="form-container">
+
+        <div id="father">
+          <div id="child">
+            <div id="grand-child">
+              <mi-button
+                id="test-boolean"
+                btn-text="Daleeeeee..."
+              ></mi-button>
+            </div>
           </div>
         </div>
-      </div>
+        
     </div>
   </body>
 </html>
