Ok, bubbling practice finished

--- a/index.html
+++ b/index.html
@@ -13,29 +13,35 @@
     />
     <script
       type="module"
-      src="./script.js"
-    ></script>
-    <script
-      type="module"
-      src="./web-components/button-component/button-component.js"
+      src="./bubling/bubling-js.js"
     ></script>
   </head>
   <body>
     <div class="container">
       <h1>Vanilla Web Component</h1>
-      <div class="form-container">
-
+      <button id="btn-hidden-div">Hidden DIV</button>
+      <div class="form-container">        
         <div id="father">
           <div id="child">
             <div id="grand-child">
-              <mi-button
-                id="test-boolean"
-                btn-text="Daleeeeee..."
-              ></mi-button>
             </div>
           </div>
         </div>
-        
-    </div>
-  </body>
-</html>
+      </div>
+
+      <button id="btn-grand-child">Click Grand Child</button>
+      <button id="btn-child">Click Child</button>
+      <button id="btn-father">Click Father</button>
+    </body>
+    </html>
+
+    
+    <!-- Test creacion de web component -->
+    <!-- <script
+      type="module"
+      src="./web-components/button-component/button-component.js"
+    ></script> -->
+    <!-- <mi-button
+      id="test-boolean"
+      btn-text="Daleeeeee..."
+    ></mi-button> -->
