--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       type="module"
       src="./bubling/bubling-js.js"
     ></script>
+    <script
+      type="module"
+      src="./context/context.js"
+    ></script>
   </head>
   <body>
     <div class="container">
