More & more of  Lit

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         bolea
         title="Card component"
       ></card-component>
+      <br /><br />
+      <lit-component
+        content="My Button"
+        btnColor="btn-primary"
+        doble
+      ></lit-component>
 
       <!-- Test creacion de web component -->
       <!-- <script
