More & more of  Lit

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <!-- LIT BASED WEB COMPONENT -->
       <card-component
         bolea
-        title="Card component"
+        title="Card component NOW"
       ></card-component>
       <br /><br />
       <lit-component
