--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       rel="stylesheet"
       href="styles.css"
     />
-    <script
+    <!-- <script
       type="module"
       src="./bubling/bubling-js.js"
-    ></script>
+    ></script> -->
 
     <script
       type="module"
@@ -23,42 +23,12 @@
   </head>
   <body>
     <div class="container">
-      <h1>Vanilla Web Component</h1>
-      <button id="btn-hidden-div">Hidden DIV</button>
-      <div class="form-container">
-        <div id="father">
-          <div id="child">
-            <div id="grand-child"></div>
-          </div>
-        </div>
-      </div>
-
-      <button id="btn-grand-child">Click Grand Child</button>
-      <button id="btn-child">Click Child</button>
-      <button id="btn-father">Click Father</button>
-
-      <br /><br />
-      <!-- LIT BASED WEB COMPONENT -->
-      <card-component
-        bolea
-        title="Card component NOW"
-      ></card-component>
-      <br /><br />
       <lit-component
-        content="My Button"
-        btnColor="btn-primary"
+        content="My Button extra"
+        btnColor="btn-secundary"
         doble
       ></lit-component>
-
-      <!-- Test creacion de web component -->
-      <!-- <script
-        type="module"
-        src="./web-components/button-component/button-component.js"
-      ></script>
-      <mi-button
-        id="test-boolean"
-        btn-text="Daleeeeee..."
-      ></mi-button> -->
+      <lit-card></lit-card>
     </div>
   </body>
 </html>
