Working on dark/light mode

--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
   <body>
     <div class="container">
       <lit-component
-        content="My Button extra"
-        btnColor="btn-secundary"
-        doble
+        content="My Button fenomenal"
+        btnColor="btn-secondary"
       ></lit-component>
       <lit-card></lit-card>
     </div>
